增加新需求

--- a/leaf-server/src/main/resources/application.properties
+++ b/leaf-server/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.freemarker.content-type=text/html
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.expose-session-attributes=true
 spring.freemarker.request-context-attribute=request
+
+
+server.port=8089
+
+#mybatis
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/leaf?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.mapper-locations=classpath:com/how2java/springboot/mapper/*.xml
+mybatis.type-aliases-package=com.how2java.springboot.pojo
